org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/Assignment/AssignmentTest04/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project AssignmentTest04 {
	import "${project.baseUri}/002_AssignmentTest04.kmt"
}
